# agentic-orchestrator

./: .env.example  .gitignore  pyproject.toml  test_planner.py
agent/: __init__.py  graphs.py  router.py  state.py
api/: routes.py  schemas.py
app/: main.py
engine/: services.py
tools/: document_tools.py
