[project]
name = "prj3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.6",
    "langgraph>=1.0.8",
    "loguru>=0.7.3",
    "openai>=2.18.0",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
